syntax = "proto3";


option go_package = "services/";

message Post {
    int32 id = 1;
    string title = 2;
    string content = 3;
}

message Empty{}

message PostList{
    repeated Post posts = 1;
}

service PostService {
    rpc GetPosts(Empty) returns (PostList) {};
}
